--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
+    <ul>
+      <li><a href="./1-gallery.html">1-gallery</a></li>
+      <li><a href="./2-form.html">2-form</a></li>
+    </ul>
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
@@ -17,7 +20,5 @@
     </main>
 
     <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
