--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -24,5 +24,6 @@
     </main>
 
     <load src="./partials/footer.html" />
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
